keycloak/manifset/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-ingress
  namespace: keycloak
  annotations:
    kubernetes.io/ingress.class: nginx
    # Keycloak settings
    nginx.ingress.kubernetes.io/proxy-buffer-size: "128k"
    nginx.ingress.kubernetes.io/proxy-buffers-number: "4"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
#    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - static92.com
      secretName: keycloak-tls-secret
  rules:
    - host: static92.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: main-keycloak-service 
                port:
                  number: 8080
